--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 
 <body>
+  <style>
+    #myElement {
+      position: absolute;
+      width: 100%;
+      /* background: silver; */
+      height: 100%;
+      text-align: center;
+      font: 30px/300px Helvetica, Arial, sans-serif;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
+  <div id="myElement"></div>
   <script>
     function parseEvent(e) {
       const outEvent = {}
@@ -22,12 +38,11 @@
       }
       return outEvent
     }
-    for (ev of ['touchmove', 'touchstart', 'touchend', 'touchcancel',
-      'gesturestart',
-      'gesturechange',
-      'gestureend',
-    ]) {
-      document.addEventListener(ev, (e) => window.ReactNativeWebView.postMessage(JSON.stringify(parseEvent(e))))
+    for (ev of ['touchmove', 'touchstart', 'touchend', 'touchcancel']) {
+      document.addEventListener(ev, (e) => {
+        window.ReactNativeWebView.postMessage(JSON.stringify(parseEvent(e)))
+      })
     }
+
   </script>
 </body>
