--- a/assets/shaders/index.html
+++ b/assets/shaders/index.html
@@ -61,8 +61,8 @@
         for (let x = 0; x < e.touches.length; x++) {
           const touch = e.touches[x]
           const newTouch = {
-            pageX: touch.pageX / document.body.clientWidth,
-            pageY: touch.pageY / myElement.innerHeight || touch.pageY / myElement.scrollHeight,
+            pageX: touch.pageX * window.devicePixelRatio,
+            pageY: touch.pageY * window.devicePixelRatio,
           }
           if ('force' in touch) {
             newTouch.force = touch.force
